welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: not found: value i
      i+=1
      ^golomb:10: error: not found: value i
      if(i==num-1){return T(cpt)}
         ^