welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  
  var T:Array[Int] = new Array [Int](num)
  var cpt : Int = 0
  var nb : Int = 1
  
  while (cpt!=num){  
    for (j<- 1 to nb){
      i+=1
      if(i==num-1){return T(cpt)}
      
      T(cpt-1)=cpt  
    }
    nb=cpt
  } 
	return T(cpt)
}